infra/policy/policies/mutate-if-no-request.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: default-resources-if-missing
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: add-default-resources
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - flux-system
                - cert-manager
                - kyverno-system
                - longhorn-system
                - external-secrets
                - networking
                - monitoring
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                resources:
                  requests:
                    +(cpu): "100m"
                    +(memory): "128Mi"
                  limits:
                    +(cpu): "500m"
                    +(memory): "512Mi"
